--- a/index.html
+++ b/index.html
@@ -10,4 +10,9 @@
     <h1>Homework 2</h1>
     <a href="./Homework-2/homework2_map_html.html" >Homework 2</a>
 </body>
+
+<body>
+    <h1>World Projects</h1>
+    <a href="" >World Projections</a>
+</body>
 </html>
