--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 </body>
 
 <body>
-    <h1>World Projects</h1>
-    <a href="" >World Projections</a>
+    <h1>Homework 3</h1>
+    <a href="./Homework-3/Worldprojections/worldprojections.html" >World Projections</a>
+
+    <h1>Homework 4</h1>
+    <a href="./Homework-4/tile_example.html" >UNC Tiles</a>
+
 </body>
 </html>
