--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <h1>Homework 3</h1>
     <a href="./Homework-3/Worldprojections/worldprojections.html" >World Projections</a>
 
+</body>
+
+<body>
     <h1>Homework 4</h1>
     <a href="./Homework-4/tile_example.html" >UNC Tiles</a>
 
