--- a/Homework-6/hw6_template.html
+++ b/Homework-6/hw6_template.html
@@ -16,9 +16,9 @@
 
 <!-- Link to your shapefile in Github and you CSV -->
 <h2>Data used for this project</h2>
-    <a href="./data/ACSST5Y2020.S1501-Data.csv"> CSV dataset </a>
+    <a href="https://github.com/duncan-richey/GEOG-370/blob/main/Homework-6/data/ACSST5Y2020.S1501-Data.csv"> CSV dataset </a>
     <p></p>
-    <a href="./data/NC_Counties.geojson"> Link to shapefile </a>
+    <a href="https://github.com/duncan-richey/GEOG-370/blob/main/Homework-6/data/NC_Counties.geojson"> Link to shapefile </a>
 
 </body>
 </html>
