--- a/index.html
+++ b/index.html
@@ -28,5 +28,10 @@
     <a href="./Homework-5/central_park_tiles.html" >Historical Map of Central Park</a>
 
 </body>
+<body>
+    <h1>Homework 6</h1>
+    <a href="./Homework-6/hw6_template.html" >NC County Choropleth</a>
+
+</body>
 
 </html>
